[package]
name = "lc"
version = "0.1.0"
authors = ["ielm <i.leonmaldonado@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
regex = "1.3.4"
futures = { version = "0.3.3", features = ["thread-pool"] }
surf = "2.3.2"
tokio = { version = "1.35.1", features = ["full"] }

[lib]
doctest = false
test = true
